--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ and open the template in the editor.
         <h1 style="text-align:center;font-family:verdana;color:blue;font-size:40px">Meteo OpenWeatherMap</h1>
         <div style="text-align:center">
             <form method="POST" action="index.php">
-            <p style="font-family: latin modern mono; font-size: 20px">Inerisci qui il nome della città</p>
+            <p style="font-family: latin modern mono; font-size: 20px">Inerisci qui il nome della città<br>(formato: nomecittà, IT)</p>
             <input type="text" name="citta" >
             <button type="submit" >Invia</button>
             </form>
